@@ -5,6 +5,8 @@ version <next>:
 - deflicker video filter
 - doubleweave video filter
 - lumakey video filter
+- pixscope video filter
+- oscilloscope video filter
 
 version 3.3:
 - CrystalHD decoder moved to new decode API
